doc api_CRUD with Swagger__#1example
