# app/Http/Controllers/Swagger/PostController.php
@@ -24,7 +24,14 @@ use OpenApi\Annotations as OA;
  *
  *     @OA\Response(
  *         response="200",
- *         description="Ok"
+ *         description="Ok",
+ *         @OA\JsonContent(
+ *             @OA\Property(property="data", type="object",
+ * *               @OA\Property(property="id", type="integer", example=1),
+ *                 @OA\Property(property="title", type="string", example="Some title"),
+ *                 @OA\Property(property="likes", type="integer", example=20),
+ *             ),
+ *         ),
  *     ),
  * ),
  */
