# app/Http/Resources/Post/PostResource.php
@@ -14,6 +14,10 @@ class PostResource extends JsonResource
      */
     public function toArray(Request $request): array
     {
-        return parent::toArray($request);
+        return [
+            'id'=> $this->id,
+            'title'=> $this->title,
+            'likes'=> $this->likes,
+        ];
     }
 }
